# rustlab-rs

./: .gitignore  AI_DOCUMENTATION_TEMPLATE.md  BUILD_WARNINGS_SUMMARY.md  Cargo.toml  LICENSE.md  README.md  RUSTLAB_FOR_AI_GUIDE.md  RUSTLAB_GETTING_STARTED_GUIDE.md  RUSTLAB_LINEARREGRESSION_PLAN.md  RUSTLAB_NUMPY_CHEATSHEET.md  TEST_SUMMARY.md
rustlab-distributions/: Cargo.toml  DISTRIBUTIONS_DOCUMENTATION.md
rustlab-distributions/examples/: enhanced_distributions.rs  enhanced_ergonomics.rs  integration_demo.rs
rustlab-distributions/src/: enhanced_api.rs  error.rs  fitting.rs  integration.rs  lib.rs  traits.rs
rustlab-distributions/src/continuous/: beta.rs  chi_squared.rs  exponential.rs  fisher_f.rs  gamma.rs  mod.rs  normal.rs  student_t.rs  uniform.rs
rustlab-distributions/src/discrete/: mod.rs
rustlab-distributions/src/integration/: array_ext.rs  convenience.rs  random_arrays.rs  vector_ext.rs
rustlab-distributions/src/multivariate/: mod.rs
rustlab-distributions/src/sampling/: algorithms.rs  mod.rs  rng.rs
rustlab-distributions/src/utils/: mod.rs
rustlab-linearalgebra/: Cargo.toml  LINEARALGEBRA_DOCUMENTATION.md
rustlab-linearalgebra/src/: basic_operations.rs  decompositions.rs  eigenvalues.rs  error.rs  lib.rs  minimal.rs  simple_test.rs  solvers.rs
rustlab-linearregression/: Cargo.toml
rustlab-linearregression/notebooks/: 08_ridge_regression_fixed.ipynb  parallel_hyperparameter_optimization.ipynb
rustlab-linearregression/notebooks/.ipynb_checkpoints/: 01_ols_regression_showcase-checkpoint.ipynb  parallel_hyperparameter_optimization-checkpoint.ipynb
rustlab-linearregression/src/: array_extensions.rs  cross_validation.rs  elastic_net.rs  error.rs  lasso.rs  lib.rs  logistic.rs  metrics.rs  ols.rs  ols_simple.rs  preprocessing.rs  ridge.rs  traits.rs
rustlab-math/: AI_DOCUMENTATION.md  Cargo.toml  LIST_COMPREHENSION_AI_DOCUMENTATION.md  MATH_DOCUMENTATION.md  approx.csv  constants.csv  matrix.csv  matrix.txt  test_math_first_find.rs  test_perf.rs
rustlab-math/benches/: immediate_operators.rs
rustlab-math/examples/: test_fill.rs  test_new_methods.rs
rustlab-math/notebooks/: 01_vectors_and_arrays_basics.ipynb  03_comparisons_and_filtering.ipynb  04_matrix_operations_linear_algebra.ipynb  05b_ergonomic_broadcasting.ipynb  06_reductions_and_statistics.ipynb  06b_math_first_reductions.ipynb  09_functional_programming.ipynb  12_real_world_examples.ipynb  13_math_first_find_and_any.ipynb  13_vectorized_heat_equation.ipynb  14_list_comprehension_showcase.ipynb  README.md  matrix_column_row_operations.ipynb  test_scalar_simple.ipynb
rustlab-math/notebooks/.ipynb_checkpoints/: 01_vectors_and_arrays_basics-checkpoint.ipynb  02_element_wise_operations-checkpoint.ipynb  04_matrix_operations_linear_algebra-checkpoint.ipynb  05_broadcasting_advanced_operations-checkpoint.ipynb  05b_ergonomic_broadcasting-checkpoint.ipynb  07b_ergonomic_math_first_slicing-checkpoint.ipynb  08b_ergonomic_concatenation_reshaping-checkpoint.ipynb  10b_ergonomic_math_first_complex_numbers_jupyter-checkpoint.ipynb  (+7 more)
rustlab-math/src/: arithmetic.rs  array.rs  broadcasting.rs  broadcasting_ops.rs  comparison.rs  comprehension.rs  concatenation.rs  constants.rs  creation.rs  ergonomic_slicing.rs  error.rs  functional.rs  index_operators.rs  io.rs  lib.rs  macros.rs  math_first_reductions.rs  math_functions.rs  natural_slicing.rs  operators.rs  reductions.rs  simd.rs  slicing.rs  statistics.rs  vector.rs  views.rs
rustlab-math/tests/: assignment_tests.rs  complex_math_functions_tests.rs  matrix_vector_tests.rs  slice_tests.rs  test_math_first_find.rs  view_tests.rs
rustlab-numerical/: Cargo.toml  NUMERICAL_DOCUMENTATION.md
rustlab-numerical/examples/: differentiation.rs  integration.rs  interpolation.rs  roots.rs
rustlab-numerical/notebooks/: 01_interpolation_methods.ipynb  01_interpolation_methods_broken.ipynb  02_numerical_integration.ipynb  03_differentiation_methods.ipynb  README.md
rustlab-numerical/src/: error.rs  lib.rs
rustlab-numerical/tests/: differentiation_tests.rs  integration_tests.rs  interpolation_tests.rs  roots_tests.rs
rustlab-optimize/: Cargo.toml  OPTIMIZE_DOCUMENTATION.md  test_cell_4  test_cell_4.rs  test_linear_regression.rs  test_lint_check.rs
rustlab-optimize/examples/: algorithm_selection_demo.rs  bounds_demo.rs  exponential_fitting_demo.rs  parameter_fixing_showcase.rs  quick_start.rs
rustlab-optimize/notebooks/: 01_getting_started.ipynb  02_curve_fitting.ipynb  03_parameter_constraints.ipynb  README.md  RUST_NOTEBOOK_BEST_PRACTICES.md  utils.rs
rustlab-optimize/src/: bounds.rs  fit.rs  lib.rs  minimize.rs
rustlab-optimize/tests/: test_least_squares.rs  test_notebook_01.rs  test_notebook_02.rs
rustlab-plotting/: Cargo.toml  PLOTTING_DOCUMENTATION.md
rustlab-plotting/examples/: contour_demo.rs  contour_png_test.rs  simple_contour_test.rs  test_3d_surface.rs  test_variety.rs
rustlab-plotting/notebooks/: 3d_surface_plotting_showcase.ipynb  contour_plotting_showcase.ipynb  log_scale_examples.ipynb  log_scale_plotting.ipynb  plotting_showcase.ipynb
rustlab-plotting/src/: error.rs  lib.rs  math_integration.rs  prelude.rs  test_simple.rs
rustlab-plotting/tests/: lib.rs
rustlab-special/: Cargo.toml  SPECIAL_DOCUMENTATION.md
rustlab-special/examples/: rustlab_math_integration.rs
rustlab-special/src/: bessel.rs  bessel_modified.rs  bessel_y.rs  error_functions.rs  error_functions_test_data.rs  gamma_functions.rs  gamma_functions_test_data.rs  incomplete_gamma.rs  integration.rs  lib.rs
rustlab-stats/: Cargo.toml  STATS_DOCUMENTATION.md
rustlab-stats/benches/: performance_comparison.rs
rustlab-stats/notebooks/: 01_descriptive_statistics_showcase.ipynb  02_hypothesis_testing_guide.ipynb  03_correlation_analysis.ipynb  05_distribution_analysis.ipynb  06_multivariate_statistics.ipynb  README.md
rustlab-stats/src/: correlation.rs  error.rs  hypothesis.rs  lib.rs  normalization.rs  performance.rs  prelude.rs
rustlab-stats/tests/: distributions_integration.rs  integration_test.rs  linearalgebra_integration.rs
src/: lib.rs
(+61 files in other folders)
