[package]
name = "rustlab-distributions"
version = "0.1.0"
edition = "2021"
authors = ["RustLab Contributors"]
description = "Probability distributions library for RustLab"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CameronReed-42/rustlab-rs"
keywords = ["distributions", "probability", "statistics", "random", "sampling"]
categories = ["science", "mathematics"]

[dependencies]
rustlab-math = { path = "../rustlab-math", optional = true }
rustlab-special = { path = "../rustlab-special" }
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
num-complex = "0.4"
faer = "0.22"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
approx = "0.5"
criterion = "0.5"

[features]
default = []
integration = ["rustlab-math"]
