[package]
name = "rustlab-linearalgebra"
version = "0.1.0"
edition = "2021"
authors = ["RustLab Contributors"]
description = "Advanced linear algebra operations for RustLab using faer"
repository = "https://github.com/CameronReed-42/rustlab-rs"
keywords = ["linear-algebra", "mathematics", "faer", "decomposition", "eigenvalues"]
categories = ["mathematics", "science"]
license = "MIT OR Apache-2.0"

[dependencies]
rustlab-math = { path = "../rustlab-math" }
faer = "0.22"
faer-entity = "0.20.1"
faer-traits = "0.22.1"
num-complex = "0.4"
num-traits = "0.2"
thiserror = "1.0"
approx = "0.5"

[dev-dependencies]
approx = "0.5"
